[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zahlen-tanz"
version = "0.1.0"
description = "Zahlen Tanz"
authors = [
    {name = "Adeeb", email = "adeeb.armalite@gmail.com"}
]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
