[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zahlen-tanz"
version = "0.1.0"
description = "A collection of Python experiments visualizing chaotic systems and differential equations."
authors = [
    {name = "Your Name", email = "youremail@example.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
